--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="./assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/profile-img.JPG" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Racer &amp; Gamer.</h3>
@@ -120,11 +120,11 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/img-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/img-1.JPG" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Photo 1</h4>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/img-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Photo 1"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/img-1.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Photo 1"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -132,11 +132,11 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/img-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/img-2.JPG" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Photo 2</h4>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/img-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Photo 2"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/img-2.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Photo 2"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -144,11 +144,11 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/img-3.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/img-3.JPG" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Photo 3</h4>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/img-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Photo 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/img-3.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Photo 3"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
