--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
@@ -48,8 +49,6 @@
         <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
         <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
         <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Gallery</span></a></li>
-        <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Worksheet</span></a></li>
-        <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
 
@@ -59,11 +58,20 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Arik Rizki Akbar</h1>
-      <p>I'm <span class="typed" data-typed-items="Gamer, Racer, Student"></span></p>
+      <p>I am <span class="typed" data-typed-items="Student, Racer, Gamer"></span></p>
       <div class="social-links">
-        <a href="https://github.com/arik147" class="github"><i class="bx bxl-github"></i></a>
-        <a href="https://www.facebook.com/arfha.nivans21/" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="https://instagram.com/arikr.a?utm_medium=copy_link" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/arik-rizki-akbar-073b8424b/" target="_blank">
+            <i class="fa fa-linkedin"></i>
+        </a>
+        <a href="https://www.instagram.com/arikr.a/" target="_blank">
+            <i class="fa fa-instagram"></i>
+        </a>
+        <a href="https://github.com/arik147" target="_blank">
+            <i class="fa fa-github"></i>
+        </a>
+        <a href="mailto:arikrizkiakbar@gmail.com" target="_blank">
+          <i class="fa fa-envelope"></i>
+        </a>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -76,7 +84,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Privet! I am Arik Rizki Akbar, Welcome!.</p>
+          <p>Privet! I am <strong>Arik Rizki Akbar</strong></p>
         </div>
 
         <div class="row">
@@ -84,21 +92,26 @@
             <img src="assets/img/profile-img.JPG" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>Racer &amp; Gamer.</h3>
+            <h3>Personal information</h3>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>14 Juli 2001</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Majalengka, Jawa Barat</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+62 85846673985</span></li>
+                  <li><a><i class="px-2 fa fa-graduation-cap"></i>
+                  </a> <span>Computer Science Student</span></li>
+                  <li><a><i class="fa fa-location-dot" style="padding-left: 11px; padding-right: 14px;"></i>
+                  </a><span>Bandung, Indonesia</span></li>
+                  <li><a><i class="fa fa-envelope" style="padding-left: 10px; padding-right: 10px;"></i>
+                  </a><span>arikrizkiakbar@gmail.com</span></li></li>
                 </ul>
               </div>
+            </div>
+            <div class="row">
+              <h3>About Me</h3>
               <div class="col-lg-6">
-                <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>20</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>arz147@upi.edu</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
-                </ul>
+                <p>I am Undergraduate Computer Science Student at Universitas Pendidikan Indonesia. Currently studying as Cloud Computing Cohort in Bangkit Academy.
+                  Having a strong interest in the world of Software Engineering. C lang, Flutter, Laravel, and Node Js are my favorite languages.
+                  Beside of that, i was a Grasstrack well-trained racer and Gamer. But nowadays, i utilize it as a hobbies to escape my daily routine.
+              </p>
               </div>
             </div>
           </div>
@@ -122,9 +135,9 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/img-1.JPG" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Photo 1</h4>
+                <h4>Jump</h4>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/img-1.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Photo 1"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/img-1.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Jump"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -134,9 +147,9 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/img-2.JPG" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Photo 2</h4>
+                <h4>Corner Left</h4>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/img-2.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Photo 2"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/img-2.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Corner Left"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -146,9 +159,9 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/img-3.JPG" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Photo 3</h4>
+                <h4>Sliding</h4>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/img-3.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Photo 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/img-3.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Sliding"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -159,141 +172,13 @@
       </div>
     </section><!-- End Portfolio Section -->
 
-    <!-- ======= Services Section ======= -->
-    <section id="services" class="services">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>Worksheet</h2>
-          <p>Berikut Tugas-tugas yang saya kerjakan.</p>
-        </div>
-
-        <div class="row">
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
-            <div class="icon-box iconbox-orange ">
-              <div class="icon">
-                <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
-                  <path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,582.0697525312426C382.5290701553225,586.8405444964366,449.9789794690241,525.3245884688669,502.5850820975895,461.55621195738473C556.606425686781,396.0723002908107,615.8543463187945,314.28637112970534,586.6730223649479,234.56875336149918C558.9533121215079,158.8439757836574,454.9685369536778,164.00468322053177,381.49747125262974,130.76875717737553C312.15926192815925,99.40240125094834,248.97055460311594,18.661163978235184,179.8680185752513,50.54337015887873C110.5421016452524,82.52863877960104,119.82277516462835,180.83849132639028,109.12597500060166,256.43424936330496C100.08760227029461,320.3096726198365,92.17705696193138,384.0621239912766,124.79988738764834,439.7174275375508C164.83382741302287,508.01625554203684,220.96474134820875,577.5009287672846,300,582.0697525312426"></path>
-                </svg>
-                <i class="bx bx-file"></i>
-              </div>
-              <h4><a href="https://drive.google.com/file/d/1O49Ej2W9LZ1DkHNYDyDPWWhQQZ3aqXwj/view?usp=sharing">Worksheet 1</a></h4>
-              <p>Domain dan Hosting</p>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
-            <div class="icon-box iconbox-yellow">
-              <div class="icon">
-                <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
-                  <path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,503.46388370962813C374.79870501325706,506.71871716319447,464.8034551963731,527.1746412648533,510.4981551193396,467.86667711651364C555.9287308511215,408.9015244558933,512.6030010748507,327.5744911775523,490.211057578863,256.5855673507754C471.097692560561,195.9906835881958,447.69079081568157,138.11976852964426,395.19560036434837,102.3242989838813C329.3053358748298,57.3949838291264,248.02791733380457,8.279543830951368,175.87071277845988,42.242879143198664C103.41431057327972,76.34704239035025,93.79494320519305,170.9812938413882,81.28167332365135,250.07896920659033C70.17666984294237,320.27484674793965,64.84698225790005,396.69656628748305,111.28512138212992,450.4950937839243C156.20124167950087,502.5303643271138,231.32542653798444,500.4755392045468,300,503.46388370962813"></path>
-                </svg>
-                <i class="bx bx-layer"></i>
-              </div>
-              <h4><a href="http://arikra.c120.me/">Worksheet 2</a></h4>
-              <p>Private Website</p>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
-            <div class="icon-box iconbox-yellow">
-              <div class="icon">
-                <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
-                  <path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,503.46388370962813C374.79870501325706,506.71871716319447,464.8034551963731,527.1746412648533,510.4981551193396,467.86667711651364C555.9287308511215,408.9015244558933,512.6030010748507,327.5744911775523,490.211057578863,256.5855673507754C471.097692560561,195.9906835881958,447.69079081568157,138.11976852964426,395.19560036434837,102.3242989838813C329.3053358748298,57.3949838291264,248.02791733380457,8.279543830951368,175.87071277845988,42.242879143198664C103.41431057327972,76.34704239035025,93.79494320519305,170.9812938413882,81.28167332365135,250.07896920659033C70.17666984294237,320.27484674793965,64.84698225790005,396.69656628748305,111.28512138212992,450.4950937839243C156.20124167950087,502.5303643271138,231.32542653798444,500.4755392045468,300,503.46388370962813"></path>
-                </svg>
-                <i class="bx bx-layer"></i>
-              </div>
-              <h4><a href="http://arikra.c120.me/amazon">Amazon Go</a></h4>
-              <p>Amazon Go Web</p>
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </section><!-- End Services Section -->
-
-
-    <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>Contact</h2>
-        </div>
-
-        <div class="row mt-1">
-
-          <div class="col-lg-4">
-            <div class="info">
-              <div class="address">
-                <i class="bi bi-geo-alt"></i>
-                <h4>Location:</h4>
-                <p>Cikijing, Majalengka, Jawa Barat 45466</p>
-              </div>
-
-              <div class="email">
-                <i class="bi bi-envelope"></i>
-                <h4>Email:</h4>
-                <p>arz147@upi.edu</p>
-              </div>
-
-              <div class="phone">
-                <i class="bi bi-phone"></i>
-                <h4>Call:</h4>
-                <p>085846673985</p>
-              </div>
-
-            </div>
-
-          </div>
-
-          <div class="col-lg-8 mt-5 mt-lg-0">
-
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-              <div class="row">
-                <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
-                </div>
-                <div class="col-md-6 form-group mt-3 mt-md-0">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
-                </div>
-              </div>
-              <div class="form-group mt-3">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
-              </div>
-              <div class="form-group mt-3">
-                <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
-              </div>
-              <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
-            </form>
-
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Contact Section -->
-
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: [license-url] -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        &copy; 2023 <a href="https://arik147.github.io/arik-profile/" target="_blank"> <strong>Arik Rizki Akbar</strong>. All Rights Reserved</a>
       </div>
     </div>
   </footer><!-- End Footer -->
@@ -311,6 +196,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="https://kit.fontawesome.com/01e9947338.js" crossorigin="anonymous"></script>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
