--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
 
     <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio section-bg">
+    <!--<section id="portfolio" class="portfolio section-bg">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -168,9 +168,9 @@
           </div>
 
         </div>
-
       </div>
-    </section><!-- End Portfolio Section -->
+    </section>-->
+    <!-- End Portfolio Section -->
 
   </main><!-- End #main -->
 
