--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-4">
+          <!--<div class="col-lg-4">
             <img src="assets/img/profile-img.JPG" class="img-fluid" alt="">
-          </div>
+          </div>-->
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Personal information</h3>
             <div class="row">
@@ -108,8 +108,8 @@
             <div class="row">
               <h3>About Me</h3>
               <div class="col-lg-6">
-                <p>I am Undergraduate Computer Science Student at Universitas Pendidikan Indonesia. Currently studying as Cloud Computing Cohort in Bangkit Academy.
-                  Having a strong interest in the world of Software Engineering. C lang, Flutter, Laravel, and Node Js are my favorite languages.
+                <p>Final year Computer Science Student at Universitas Pendidikan Indonesia, Google Cloud Certified as Associate Cloud Engineer. Graduated in Cloud Computing Bangkit Academy Batch 1 of 2023.
+                  Having a strong interest in the world of Software Engineering.
                   Beside of that, i was a Grasstrack well-trained racer and Gamer. But nowadays, i utilize it as a hobbies to escape my daily routine.
               </p>
               </div>
