--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
     <section id="about" class="about">
       <div class="container" data-aos="fade-up">
 
-        <div class="section-title">
+        <!--<div class="section-title">
           <h2>About</h2>
           <p>Privet! I am <strong>Arik Rizki Akbar</strong></p>
-        </div>
+        </div>-->
 
         <div class="row">
           <!--<div class="col-lg-4">
@@ -108,9 +108,10 @@
             <div class="row">
               <h3>About Me</h3>
               <div class="col-lg-6">
-                <p>Final year Computer Science Student at Universitas Pendidikan Indonesia, Google Cloud Certified as Associate Cloud Engineer. Graduated in Cloud Computing Bangkit Academy Batch 1 of 2023.
+                <p>Final year Computer Science Student at Universitas Pendidikan Indonesia, Google Cloud Certified as Associate Cloud Engineer.
+                  Graduated in Cloud Computing Bangkit Academy Batch 1 of 2023.
                   Having a strong interest in the world of Software Engineering.
-                  Beside of that, i was a Grasstrack well-trained racer and Gamer. But nowadays, i utilize it as a hobbies to escape my daily routine.
+                  Anyway, I am a former Grasstrack racer and E-sport competitive player.
               </p>
               </div>
             </div>
