--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <p>Final year Computer Science Student at Universitas Pendidikan Indonesia, Google Cloud Certified as Associate Cloud Engineer.
                   Graduated in Cloud Computing Bangkit Academy Batch 1 of 2023.
                   Having a strong interest in the world of Software Engineering.
-                  Anyway, I am a former Grasstrack racer and E-sport competitive player.
+                  Anyways, I am a former Grasstrack racer and E-sport competitive player.
               </p>
               </div>
             </div>
